# builder_dash

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
builder_dash/: setup_cfg.py  setup_py.py
builder_dash/templates/licenses/: __init__.py  license_mit.py
src/builder_dash/: bd.py  main.py  readme_rst.py  setup_cfg.py
src/builder_dash/tools/: make_project.py
