[metadata]
name = builder_dash
version = dev
url = https://github.com/ShazbotLabs/builder_dash
author = Thomas Svensson
author_email = thomas@tsvenson.com
license = MIT
description = Building and management tools for ShazbotLabs projects.
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir=
    =src
packages = builder_dash
